--- a/Assets/Cucurbit/Easy License View/EasyLicenseView.asmdef
+++ b/Assets/Cucurbit/Easy License View/EasyLicenseView.asmdef
@@ -1,3 +1,30 @@
-﻿{
-	"name": "EasyLicenseView"
+{
+    "name": "EasyLicenseView",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [
+        "Android",
+        "CloudRendering",
+        "Editor",
+        "iOS",
+        "LinuxStandalone64",
+        "Lumin",
+        "macOSStandalone",
+        "PS4",
+        "Stadia",
+        "Switch",
+        "tvOS",
+        "WSA",
+        "WebGL",
+        "WindowsStandalone32",
+        "WindowsStandalone64",
+        "XboxOne"
+    ],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
