--- a/Assets/Cucurbit/Easy License View/EasyLicenseView.asmdef
+++ b/Assets/Cucurbit/Easy License View/EasyLicenseView.asmdef
@@ -2,24 +2,7 @@
     "name": "EasyLicenseView",
     "references": [],
     "includePlatforms": [],
-    "excludePlatforms": [
-        "Android",
-        "CloudRendering",
-        "Editor",
-        "iOS",
-        "LinuxStandalone64",
-        "Lumin",
-        "macOSStandalone",
-        "PS4",
-        "Stadia",
-        "Switch",
-        "tvOS",
-        "WSA",
-        "WebGL",
-        "WindowsStandalone32",
-        "WindowsStandalone64",
-        "XboxOne"
-    ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
